--- a/OOP with C++/OOP with C++.vcxproj
+++ b/OOP with C++/OOP with C++.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="fibo.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{63B68B12-7919-4019-B49E-3BC36EA83799}</ProjectGuid>
@@ -122,10 +125,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\Cpp\Chapter 3\Chapter 3\frac_calculator.cpp" />
-    <ClCompile Include="..\..\Cpp\Chapter 3\Chapter 3\fibo.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
