--- a/OOP with C++/OOP with C++.vcxproj
+++ b/OOP with C++/OOP with C++.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fibo.cpp" />
+    <ClCompile Include="frac_calculator.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
