--- a/OOP with C++/OOP with C++.vcxproj.filters
+++ b/OOP with C++/OOP with C++.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="fibo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="frac_calculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
